# TrafegoPro

./: .gitignore  README.md  main.py  pyproject.toml
src/adapters/inbound/controllers/: geocode_controller.py  route_controller.py
src/adapters/inbound/dto/request/: geocode_request.py  route_request.py
src/adapters/inbound/dto/response/: geocode_response.py  route_response.py
src/adapters/inbound/mappers/: route_mapper.py
src/adapters/outbound/repositories/: postgres_user_repository.py
src/adapters/outbound/services/: nominatim_geocoding_service.py
src/application/dto/request/: geocode_request.py  route_request.py  user_request.py
src/application/dto/response/: user_response.py
src/application/mapper/: route_mapper.py  user_mapper.py
src/application/ports/: geocoding_port.py  user_repository.py
src/application/services/: geocoding_service.py  route_optimizer.py
src/application/use_cases/: create_user.py  delete_users.py  geocode_address.py  get_user.py  optimize_route.py  search_geocode.py
src/config/: dependencies.py
src/domain/entities/: route.py  user.py
src/domain/value_objects/: geo_point.py
static/: app.js  index.html  styles.css
tests/: test_routes.py
