[project]
name = "trafegopro"
version = "0.1.0"
description = "MVP de planejamento e otimizacao de rotas com FastAPI, Leaflet e OpenStreetMap"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
